--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -1,7 +1,7 @@
 // (C) Copyright 2014-2017 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
-// 
+//
 // Text format: asciidoc 8.6.9
 // Editor:      Asciidoc Book Editor
 //
@@ -12,7 +12,11 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.031
+:Revision: 0.032
+
+_Version: {doc_version}_  +
+_Document Revision: {doc_revision}_ +
+_Document Revision Date: {doc_date}_ +
 
 === Document Change History
 
@@ -20,12 +24,13 @@ List of the changes that have occurred between one or more releases.
 
 [cols="^4,^5,10", width="90%", options="header", frame="topbot"]
 |=============================
-|Revision | Date                         | Changes 
+|Revision | Date                         | Changes
 |0.01     | 2016-12-01                   | Initial Asciidoc document layout setup and style, no content.
 |0.02     | 2017-05-01                   | Previous content changes and updates
-|0.021    | 2017-05-01                   | Add new section Discussion Points 
+|0.021    | 2017-05-01                   | Add new section Discussion Points
 |0.022    | 2017-09-28                   | Add content or fix content. Fix PDF chapter and section numbering
 |0.03     | 2017-09-29                   | Fix spelling
-|0.031    | {docdate}                    | Add content or fix content
+|0.031    | 2017-10-03                   | Doc layout fix modifications for use with Asciidoctor cli tool for rendering PDF
+|0.032    | {docdate}                    | Add content or fix content
 |1.0      | [red yellow-background]#???# | First revision
 |=============================
