--- a/GuidelinesCoverPage.adoc
+++ b/GuidelinesCoverPage.adoc
@@ -1,4 +1,4 @@
-// (C) Copyright 2014-2017 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
 //
@@ -9,21 +9,21 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.32
+:Revision: 0.04
 
 image::images/Khronos_500px_May16.png[pdfwidth=60%,width=50%, align=center]
 
 [cols="^s", width="100%", frame=""]
 |=============================
 
-[big]*Khronos Safety Critical API Development Guidelines +
-(Provisional)* +
+[big]*Khronos Safety Critical API Development Guidelines* +
 
 _Documents: 1 of 2_
 
 
 Khronos Safety Critical Advisory Panel (SCAP)
 
-_Editor:_ Illya Rudkin
+_Chairman:_ Illya Rudkin +
+_Editor:_ Illya Rudkin +
 
 |=============================
