--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -1,4 +1,4 @@
-// (C) Copyright 2014-2017 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
 //
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.032
+:Revision: 0.04
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -31,6 +31,7 @@ List of the changes that have occurred between one or more releases.
 |0.022    | 2017-09-28                   | Add content or fix content. Fix PDF chapter and section numbering
 |0.03     | 2017-09-29                   | Fix spelling
 |0.031    | 2017-10-03                   | Doc layout fix modifications for use with Asciidoctor cli tool for rendering PDF
-|0.032    | {docdate}                    | Add content or fix content
-|1.0      | [red yellow-background]#???# | First revision
+|0.032    | 2017-10-04                   | Add content or fix content
+|0.04     | 2018-02-14                   | Changed the date of the copyright. Fix where to find these documents on Khronos. Change chairman.
+//|x.x      | [red yellow-background]#???# | 
 |=============================
