--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -1,7 +1,7 @@
-// (C) Copyright 2014-2017 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
-// 
+//
 // Text format: asciidoc 8.6.9
 // Editor:      Asciidoc Book Editor
 //
@@ -9,12 +9,12 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.03
+:Revision: 0.04
 
-// Automatic section numbering, use {counter:section-id}  
+// Automatic section numbering, use {counter:section-id}
 :section-id: 0
 
-// Automatic chapter sub numbering, use {counter:chapter-sub-id}  
+// Automatic chapter sub numbering, use {counter:chapter-sub-id}
 :chapter-sub-id: 0
 
 ifdef::basebackend-docbook[]
@@ -24,11 +24,11 @@ ifdef::basebackend-html[]
 == {counter:chapter-id}. Guidelines
 endif::[]
 
-The guidelines listed in table 3.1.1 are all the guidelines in this document. However, this list is continuously revised with new guidelines being added on a regular basis. 
+The guidelines listed in table 3.1.1 are all the guidelines in this document. However, this list is continuously revised with new guidelines being added on a regular basis.
 
 IMPORTANT: It is therefore recommended that the guidelines be periodically reviewed for new or updated guidelines.
 
-TIP: If you wish to contribute to the guidelines please contact the SCAP working group chair person. 
+TIP: If you wish to contribute to the guidelines please contact the SCAP working group chair person.
 
 include::Guidelines_3_1_GuidelinesList.adoc[]
 
@@ -66,7 +66,4 @@ include::Guidelines_3_2_17_28_Cybersecurity.adoc[]
 
 include::Guidelines_3_2_18_29_DevelopmentOutOfContext.adoc[]
 
-
-
-
-
+include::Guidelines_3_2_19_30_ProvideInitAndShutdown.adoc[]
