--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -1,20 +1,20 @@
-// (C) Copyright 2014-2017 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
-// 
+//
 // Text format: asciidoc 8.6.9
 // Editor:      Asciidoc Book Editor
 //
 // Description: Guidelines 3.1 Guidelines  list
 //
-// Notes: The hyperlink ID, <<gh?????,?>> for each requirement orguideline in 
-//        this documents is a representaion of Khronos SCAP Bugzilla issue 
-//        tracking number. The letter 'gh' before the number must be present for 
+// Notes: The hyperlink ID, <<gh?????,?>> for each requirement orguideline in
+//        this documents is a representaion of Khronos SCAP Bugzilla issue
+//        tracking number. The letter 'gh' before the number must be present for
 //        Asciidoc to accept and create a hyperlink.
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.03
+:Revision: 0.04
 
 ifdef::basebackend-docbook[]
 === Guidelines list
@@ -28,7 +28,7 @@ The following is a list of all the SCAP guidelines when considering designing an
 .List of guidelines
 [caption="Table {counter:table-id}: ", cols="^4,10", width="90%", options="header", frame="topbot"]
 |=============================
-|Guideline | Description 
+|Guideline | Description
 |<<b15008,{counter:section-id}>>  | List of SC RTOS and their unique features
 |<<b15991,{counter:section-id}>>  | Memory management
 |<<b15993,{counter:section-id}>>  | Conformance testing
@@ -46,4 +46,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<gh10,{counter:section-id}>>    | Exception handling
 |<<gh28,{counter:section-id}>>    | Cybersecurity and safety
 |<<gh29,{counter:section-id}>>    | Development out of context
+|<<gh30,{counter:section-id}>>    | Provide initialisation and shutdown functions
 |=============================
