--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -14,7 +14,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.041
 
 ifdef::basebackend-docbook[]
 === Guidelines list
@@ -47,4 +47,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<gh28,{counter:section-id}>>    | Cybersecurity and safety
 |<<gh29,{counter:section-id}>>    | Development out of context
 |<<gh30,{counter:section-id}>>    | Provide initialisation and shutdown functions
+|<<gh31,{counter:section-id}>>    | Perform a hazard risk analysis and create a safety goals report
 |=============================
