--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.05
+:Revision: 0.051
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -33,6 +33,7 @@ List of the changes that have occurred between one or more releases.
 |0.031    | 2017-10-03                   | Doc layout fix modifications for use with Asciidoctor cli tool for rendering PDF
 |0.032    | 2017-10-04                   | Add content or fix content
 |0.04     | 2018-02-14                   | Changed the date of the copyright. Fix where to find these documents on Khronos. Change chairman.
-|0.05     | 2018-03-22                   | Find and replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum' (KSCAF)
-//|x.x      | [red yellow-background]#???# | 
+|0.05     | 2018-03-22                   | Find and replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum'
+|0.051    | 2018-03-29                   | Front cover replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum' 
+//|x.x      | [red yellow-background]#???# |
 |=============================
