--- a/Guidelines_Appendix_A_1.adoc
+++ b/Guidelines_Appendix_A_1.adoc
@@ -11,16 +11,6 @@
 :Author Initials: IOR
 :Revision: 0.04
 
-=== Appendix {counter:appendix-id}
+=== Appendix {counter:appendix-id} - Bibliography
 
-Additional information in detail
-
-// Appendix sub-sections numbered using roman numbering
-===== Appendix {appendix-id}.I: Title text
-===== Appendix {appendix-id}.II: Title text
-===== Appendix {appendix-id}.III: Title text
-===== Appendix {appendix-id}.IV: Title text
-===== Appendix {appendix-id}.V: Title text
-
-
-Some information in more details perhaps some diagrams.
+include::cmn_Bibliography.adoc[]
