--- a/Guidelines_2_0_Overview.adoc
+++ b/Guidelines_2_0_Overview.adoc
@@ -9,9 +9,9 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.052
 
-// Automatic chapter sub numbering, use {counter:chapter-sub-id}  
+// Automatic chapter sub numbering, use {counter:chapter-sub-id}
 :chapter-sub-id: 0
 
 ifdef::basebackend-docbook[]
@@ -21,9 +21,9 @@ ifdef::basebackend-html[]
 == {counter:chapter-id}. Overview
 endif::[]
 
-This document contains API design guidelines to be considering when creating or refactoring a Khronos API for use in a safety critical (SC) environment. The guidelines contained here are considered non-mandatory but advisory, unlike the those specified in the SCAP Requirements document.
+This document contains API design guidelines to be considering when creating or refactoring a Khronos API for use in a safety critical (SC) environment. The guidelines contained here are considered non-mandatory but advisory, unlike the those specified in the KSCAF Requirements document.
 
-The guidelines have been given on the advice from experts in various SC fields or domains. Khronos SCAP adopts the guidelines based on development and implementation experience of those experts when satisfying a domain’s software or hardware development requirements, safety requirements and development standard. It is highly recommended that all the guidelines while not mandatory should be reviewed when creating or refactoring a Khronos API as they can act as provoking stimuli to the formation of other safety considerations in the design or refactor of the API which may otherwise be overlooked.
+The guidelines have been given on the advice from experts in various SC fields or domains. KSCAF adopts the guidelines based on development and implementation experience of those experts when satisfying a domain’s software or hardware development requirements, safety requirements and development standard. It is highly recommended that all the guidelines while not mandatory should be reviewed when creating or refactoring a Khronos API as they can act as provoking stimuli to the formation of other safety considerations in the design or refactor of the API which may otherwise be overlooked.
 
 include::Guidelines_2_1_SCAPRiderStatement.adoc[]
 
