--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.051
+:Revision: 0.052
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -34,6 +34,7 @@ List of the changes that have occurred between one or more releases.
 |0.032    | 2017-10-04                   | Add content or fix content
 |0.04     | 2018-02-14                   | Changed the date of the copyright. Fix where to find these documents on Khronos. Change chairman.
 |0.05     | 2018-03-22                   | Find and replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum'
-|0.051    | 2018-03-29                   | Front cover replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum' 
+|0.051    | 2018-03-29                   | Front cover replace 'Safety Critical Advisory Panel' (SCAP) with 'Khronos Safety Critical Advisory Forum'
+|0.052    | 2018-08-23                   | Find and replace 'Safety Critical Advisory Panel', SCAP with 'Khronos Safety Critical Advisory Forum' or KSCAF
 //|x.x      | [red yellow-background]#???# |
 |=============================
