--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -9,15 +9,15 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.052
 
 [[Guideline_2_1_SCAPRiderStatement]]
 
 ifdef::basebackend-docbook[]
-=== Khronos SCAP document usage
+=== KSCAF document usage
 endif::[]
 ifdef::basebackend-html[]
-=== {chapter-id}.{counter:chapter-sub-id}. Khronos SCAP document usage
+=== {chapter-id}.{counter:chapter-sub-id}. KSCAF document usage
 endif::[]
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
