--- a/Guidelines_2_2_Glossary.adoc
+++ b/Guidelines_2_2_Glossary.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.052
 
 ifdef::basebackend-docbook[]
 === Glossary
@@ -29,5 +29,5 @@ List of terms or definitions used within this document.
 |POSIX | Portable operating system interface
 |RTOS  | Real time operating system
 |SC    | Safety critical
-|SCAP  | Khronos Safety Critical API Panel
+|KSCAF | Khronos Safety Critical API Forum
 |=============================
