--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.041
+:Revision: 0.052
 
 // Automatic section numbering, use {counter:section-id}
 :section-id: 0
@@ -28,7 +28,7 @@ The guidelines listed in table 3.1.1 are all the guidelines in this document. Ho
 
 IMPORTANT: It is therefore recommended that the guidelines be periodically reviewed for new or updated guidelines.
 
-TIP: If you wish to contribute to the guidelines please contact the SCAP working group chair person.
+TIP: If you wish to contribute to the guidelines please contact the KSCAF working group chair person.
 
 include::Guidelines_3_1_GuidelinesList.adoc[]
 
