--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -14,7 +14,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.041
+:Revision: 0.052
 
 ifdef::basebackend-docbook[]
 === Guidelines list
@@ -23,7 +23,7 @@ ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. Guidelines list
 endif::[]
 
-The following is a list of all the SCAP guidelines when considering designing and implementing a SC API.
+The following is a list of all the KSCAF guidelines when considering designing and implementing a SC API.
 
 .List of guidelines
 [caption="Table {counter:table-id}: ", cols="^4,10", width="90%", options="header", frame="topbot"]
