--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.052
+:Revision: 0.06
 
 // Automatic section numbering, use {counter:section-id}
 :section-id: 0
@@ -69,3 +69,5 @@ include::Guidelines_3_2_18_29_DevelopmentOutOfContext.adoc[]
 include::Guidelines_3_2_19_30_ProvideInitAndShutdown.adoc[]
 
 include::Guidelines_3_2_20_31_FirstTaskPerformHARA.adoc[]
+
+include::Guidelines_3_2_21_multi_SCImplementationDetails.adoc[]
