--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -14,7 +14,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.052
+:Revision: 0.06
 
 ifdef::basebackend-docbook[]
 === Guidelines list
@@ -48,4 +48,5 @@ The following is a list of all the KSCAF guidelines when considering designing a
 |<<gh29,{counter:section-id}>>    | Development out of context
 |<<gh30,{counter:section-id}>>    | Provide initialisation and shutdown functions
 |<<gh31,{counter:section-id}>>    | Perform a hazard risk analysis and create a safety goals report
+|<<gh32,{counter:section-id}>>    | Implementation details
 |=============================
