--- a/Guidelines_1_0_Introduction.adoc
+++ b/Guidelines_1_0_Introduction.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.053
+:Revision: 0.054
 
 // Automatic chapter sub numbering, use {counter:chapter-sub-id}
 :chapter-sub-id: 0
@@ -44,7 +44,7 @@ KSCAF is open to both Khronos members and invited experts from the various SC in
 •	Widen the acceptable use of Khronos APIs for as many SC domains as possible
 •	Reduce potential API design faults or omissions that make meeting SC requirements difficult or impossible
 •	Make it easier to implement development testing
-•	Enabling an implementation to better meet and pass a SC specification
+•	Enabling an implementation to better meet and pass a particular Functional Safety Standard
 
 We assume the reader has experience in software development in general and has at a least some rudimentary understanding of programming best practices and the implications and consequences of writing software if not written with rigor and oversight.
 
@@ -55,7 +55,7 @@ ifdef::basebackend-html[]
 === {chapter-id}.{counter:chapter-sub-id}. The Guidelines
 endif::[]
 
-This document, referred to as the KSCAF Guidelines document, gives guidance on various aspects of SC programming practices, SC programming standards or SC processes that can be used when designing an API which it to be used for SC software development.
+This document, referred to as the KSCAF Guidelines document, gives guidance on various aspects of SC programming practices, SC functional safety standards, code quality standards or SC processes that can be followed when designing an API which it to be used for SC software development.
 
 ifdef::basebackend-docbook[]
 === The Requirements
