--- a/Guidelines_2_2_Glossary.adoc
+++ b/Guidelines_2_2_Glossary.adoc
@@ -9,7 +9,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.052
+:Revision: 0.054
 
 ifdef::basebackend-docbook[]
 === Glossary
@@ -29,5 +29,5 @@ List of terms or definitions used within this document.
 |POSIX | Portable operating system interface
 |RTOS  | Real time operating system
 |SC    | Safety critical
-|KSCAF | Khronos Safety Critical API Forum
+|KSCAF | Khronos Safety Critical Advisory Forum
 |=============================
