--- a/cmn_KhronosSCAPRiderStatement.adoc
+++ b/cmn_KhronosSCAPRiderStatement.adoc
@@ -10,6 +10,6 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.054
 
-IMPORTANT: An implementation of a Khronos SC API standard which passes its appropriate Khronos conformant tests should not be taken that the SC implementation in question has meet all the requirements for its specific usage. The Khronos conformant tests only show the implementation has reached a specified standard of accuracy and behaviour required for Khronos approval.
+IMPORTANT: An implementation of a Khronos SC API specification which passes its appropriate Khronos conformance test(s) should not be taken as implementation that is safe for any safety critical function it is to be used in. Each SC implementation still has to satisfy the target domain's functional safety standard requirements and safety requirements for each use. The Khronos conformant tests only show the implementation has satisfied the Khronos specification and requirements for that API, not any Functional Safety Requirement.
