--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.054
+:Revision: 0.055
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -38,5 +38,6 @@ List of the changes that have occurred between one or more releases.
 |0.052    | 2018-08-23                   | Find and replace 'Safety Critical Advisory Panel', SCAP with 'Khronos Safety Critical Advisory Forum' or KSCAF
 |0.053    | 2018-11-02                   | Insert Khronos registration mark (R)
 |0.054    | 2018-11-07                   | Various grammatical and sentence structure changes or fixes
+|0.055    | 2019-04-16                   | Apply Etem Deniz recommendations for fixes or changes
 //|x.x      | [red yellow-background]#???# |
 |=============================
